# zoomcamp-llm-2024

./: notebook.ipynb  notes-matrix-factorization.ipynb  pyproject.toml
