[tool.poetry]
name = "zoomcamp-llm-2024"
version = "0.1.0"
description = ""
authors = ["Dimitrios Ntak"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"
tdqm = "^0.0.1"
notebook = "7.1.2"
openai = "^1.35.7"
elasticsearch = "^8.14.0"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
